Fix bug with stretched images in slider

--- a/src/components/features/Gallery/Gallery.module.scss
+++ b/src/components/features/Gallery/Gallery.module.scss
@@ -259,12 +259,13 @@
 
     .minaturesFrame {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
       width: 100%;
 
       .imgWrapper {
         padding: 10px;
-        flex: 1;
+        height: 100%;
+        width: 70px;
         position: relative;
 
         &::after {
